--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "0.0.4",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
