--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
+    "react-addons-update": "^15.4.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
