--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-addons-update": "^15.4.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
+    "scroll-into-view": "^1.7.1",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
