Fixed some hard coded temporary keys, removed old code.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "SGProj",
+  "homepage": "http://chrisaikman.com/sgproj",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
